# hermes-messaging

./: Cargo.toml
client/: Cargo.toml
crates/common/: Cargo.toml
crates/crypto/: Cargo.toml
crates/crypto/src/: errors.rs
crates/crypto/src/exchange/: encryptor.rs  exchange_pair.rs  mod.rs
crates/crypto/src/messaging/: mod.rs
crates/crypto/src/signatures/: keypair.rs
server/: Cargo.toml
